k8s/apps/overlays/cell-a/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vs
  labels:
    app.kubernetes.io/name: zygarde
spec:
  hosts:
    - cell-a-svc
  http:
    - route:
        - destination:
            host: cell-a-svc
            subset: V1
